fix gamebook preview button wrap

--- a/ui/analyse/css/gamebook/_edit.scss
+++ b/ui/analyse/css/gamebook/_edit.scss
@@ -6,7 +6,7 @@
     justify-content: flex-end;
   }
   .preview {
-    @extend %flex-center, %box-radius-top;
+    @extend %flex-center-nowrap, %box-radius-top;
     padding: 0 .5em;
   }
 }
